--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
-version: '3'
+version: "3"
 
 services:
   nodejs:
@@ -8,9 +8,13 @@ services:
     container_name: nodejs
     restart: unless-stopped
     ports:
-        - "5000:5000"
+      - "8001:8001"
     networks:
-        - app-network
+      - app-network
+    environment:
+      SECRET: "${SECRET}"
+      PORT: 8001
+      NODE_ENV: "production"
 
   nginx:
     build:
@@ -22,8 +26,6 @@ services:
       - "8000:80"
     networks:
       - app-network
-
-
 
 networks:
   app-network:
