--- a/nginx.conf
+++ b/nginx.conf
@@ -10,9 +10,11 @@ http {
         # Hide nginx version information.
         server_tokens off;
 
-        listen  80;
+        listen  443;
         root    /usr/share/nginx/html;
         include /etc/nginx/mime.types;
+        ssl_certificate /etc/nginx/certs/your_site_crt_file.crt;
+        ssl_certificate_key /etc/nginx/certs/your_site_crt_file.key;
 
         location /api/ {
                 # a bunch of boilerplate proxy configuration
