--- a/nginx.conf
+++ b/nginx.conf
@@ -10,11 +10,11 @@ http {
         # Hide nginx version information.
         server_tokens off;
 
-        listen  443;
+        listen  443 ssl;
         root    /usr/share/nginx/html;
         include /etc/nginx/mime.types;
-        ssl_certificate /etc/nginx/certs/your_site_crt_file.crt;
-        ssl_certificate_key /etc/nginx/certs/your_site_crt_file.key;
+        ssl_certificate /etc/nginx/certs/fullchain.pem;
+        ssl_certificate_key /etc/nginx/certs/privkey.pem;
 
         location /api/ {
                 # a bunch of boilerplate proxy configuration
@@ -27,6 +27,10 @@ http {
                 proxy_set_header X-Real-IP $remote_addr;
                 proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
                 proxy_set_header X-Forwarded-Proto $scheme;
+                proxy_connect_timeout       300;
+                proxy_send_timeout          300;
+                proxy_read_timeout          300;
+                send_timeout                300;
 
                 #nodejs is a container specified in  compose file name
                 proxy_pass http://nodejs:8001/;
